# splitgill

./: .coveragerc  .cz.toml  .gitignore  .travis.yml  CHANGELOG.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: SUPPORT.md
.github/workflows/: main.yml
docker/: Dockerfile  elasticsearch.yml  run-tests.sh
docs/: Makefile  conf.py  index.md  index.rst  make.bat
docs/_scripts/: gen_api_pages.py
docs/fundamentals/: elasticsearch_model.md  index.md  mongodb_model.md
docs/source/: eevee.indexing.rst  eevee.ingestion.rst  eevee.rst  eevee.search.rst  modules.rst  versions.indexing.rst  versions.ingestion.rst  versions.rst  versions.search.rst
docs/usage/: index.md
eevee/: config.py  diffing.py  importing.py  mongo.py  search.py  utils.py  versioning.py
eevee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eevee/indexing/: converters.py  elasticsearch.py  feeders.py  indexers.py  indexes.py  mappers.py  utils.py
eevee/ingestion/: converters.py  feeders.py  ingesters.py
eevee/search/: search.py
splitgill/: config.py  diffing.py  ingest.py  locking.py  manager.py  model.py  mongo.py  profiles.py  search.py  utils.py
splitgill/indexing/: feeders.py  fields.py  geo.py  index.py  indexers.py  indexes.py  options.py  parser.py  syncing.py  templates.py  utils.py
splitgill/ingestion/: converters.py  feeders.py  ingesters.py
tests/: conftest.py  helpers.py  requirements.txt  test_diffing.py  test_ingest.py  test_locking.py  test_manager.py  test_model.py  test_mongo.py  test_profiles.py  test_search.py  test_syncing.py  test_utils.py  test_versioning.py
tests/indexing/: test_fields.py  test_geo.py  test_index.py  test_indexers.py  test_options.py  test_parser.py  test_templates.py  test_utils.py
tests/ingestion/: test_converters.py  test_feeders.py
tests/search/: test_search.py
versions/: config.py  importing.py  mongo.py
versions.egg-info/: PKG-INFO  SOURCES.txt
versions/indexing/: converters.py  indexers.py
versions/ingestion/: converters.py
versions/search/: search.py
