[project]
name = "splitgill"
version = "2.0.0"
description = "Versioned search library"
readme = "README.md"
requires-python = ">=2.7,!=3.0.*,!=3.1.*"
license = { text = "MIT" }
authors = [
    { name = "Josh Humphries", email = "data@nhm.ac.uk" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "blinker==1.4",
    "dictdiffer==0.7.1",
    "elasticsearch>=6.0.0,<7.0.0",
    "elasticsearch-dsl>=6.0.0,<7.0.0",
    "pymongo==3.9.0",
    "six>=1.11.0",
    "ujson==2.0.3",
]

[project.urls]
repository = "https://github.com/NaturalHistoryMuseum/splitgill"
changelog = "https://github.com/NaturalHistoryMuseum/splitgill/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool]
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.commitizen]
name = "cz_nhm"
version = "2.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = false
version_files = [
    "pyproject.toml:version"
]

[tool.black]
line-length = 88
skip_string_normalization = true

[tool.pylint]
max-line-length = 88
disable = ["C0114", "R0903"]

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
make-summary-multi-line = true
